--- a/index.html
+++ b/index.html
@@ -42,16 +42,16 @@
 			<div class="div-main">
 				<div class="cta">
 					<h1>Information you need during on-call emergencies</h1>
-					<h5>
+					<h2 class="h5">
 						Quickly link new on-call tickets to similar past incidents and their
 						solutions. All directly in Slack the moment an incident happens.
-					</h5>
+					</h2>
 				</div>
 				<div class="button-white">
 					<p class="p-bold">Get started</p>
 					<img src="images/getStarted-icon.svg" alt="" />
 				</div>
-				<img src="images/hero_image 1.jpg" alt="" class="hero-image" />
+				<img src="images/heroimage1.jpg" alt="" class="hero-image" />
 				<div class="div-main-2">
 					<div class="div-quick">
 						<h1>Quick solutions, less stress</h1>
@@ -60,7 +60,7 @@
 								<div class="div-icon-div-card">
 									<img src="images/fix-icon.svg" alt="" />
 								</div>
-								<h3>Fix emergencies fast</h3>
+								<h2>Fix emergencies fast</h2>
 								<p class="p-regular">
 									Save 20-30 minutes per on-call ticket - no more searching for
 									relevant issues and runbooks
@@ -70,7 +70,7 @@
 								<div class="div-icon-div-card">
 									<img src="images/universally-icon.svg" alt="" />
 								</div>
-								<h3>Universally compatible</h3>
+								<h2>Universally compatible</h2>
 								<p class="p-regular">
 									Works with PagerDuty, Jira, or custom Slack alerts—Pandem
 									integrates with any system
@@ -80,7 +80,7 @@
 								<div class="div-icon-div-card">
 									<img src="images/secure.svg" alt="" />
 								</div>
-								<h3>Secure for your org</h3>
+								<h2>Secure for your org</h2>
 								<p class="p-regular">
 									We keep your data safe by taking top security measures.
 								</p>
@@ -89,15 +89,15 @@
 					</div>
 					<div class="div-instant-git">
 						<h1>Instant setup, no custom code</h1>
-						<h5>
+						<h2 class="h5">
 							Invite the bot, pick a channel, and you're set—no custom code
 							needed, and no vendor lock-in.
-						</h5>
-						<img src="images/hero_image 1.jpg" alt="" />
+						</h2>
+						<img src="images/heroimage1.jpg" alt="" />
 					</div>
 					<div class="div-instant-git">
 						<h1>Get in touch</h1>
-						<h5>Request a demo, or hop on a call.</h5>
+						<h2 class="h5">Request a demo, or hop on a call.</h2>
 					</div>
 					<div class="button-white">
 						<p class="p-bold">Get started</p>
